--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "i18next-browser-languagedetector": "^8.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.4.1"
+    "react-i18next": "^15.4.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
