--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 VITE_NEWS_API_KEY=your_newsapi_key_here
-VITE_NEWS_API_BASE=https://newsapi.org/v2
+VITE_NEWS_API_BASE=https://newsapi.org
 
 VITE_GUARDIAN_API_KEY=your_guardian_api_key_here
 VITE_GUARDIAN_API_BASE=https://content.guardianapis.com
 
 VITE_NY_TIMES_API_KEY=your_nytimes_key_here
-VITE_NY_TIMES_API_BASE=https://api.nytimes.com/svc
+VITE_NY_TIMES_API_BASE=https://api.nytimes.com
